[package]
name = "asciigen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
coord_2d = { version = "0.3.6", features = ["serde"] }
grid_2d = { version = "0.15.3", features = ["serde"] }
noise = "0.8.2"
serde = { version = "1.0.175", features = ["derive"] }
