[package]
name = "asciigen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", default-features = true, features = []}
bevy_egui = { version = "0.21.0", features = ["serde"] }
coord_2d = { version = "0.3.6", features = ["serde"] }
grid_2d = { version = "0.15.3", features = ["serde"] }
noise = "0.8.2"
rand = { version = "0.8.5", features = ["serde"] }
serde = { version = "1.0.175", features = ["derive"] }
